--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "install:bun": "bun install",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next && rm -rf node_modules && bun install",
+    "test": "bunx playwright test",
+    "test:ui": "bunx playwright test --ui",
+    "test:debug": "bunx playwright test --debug",
+    "test:headed": "bunx playwright test --headed",
+    "test:report": "bunx playwright show-report"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -14,14 +22,15 @@
     "next": "15.3.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.53.1",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
